--- a/src/app/games/game-summary/game-summary.component.css
+++ b/src/app/games/game-summary/game-summary.component.css
@@ -1,7 +1,6 @@
 .summary-board {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto;
     justify-items: center;
     align-items: center;
 }
