--- a/src/styles.css
+++ b/src/styles.css
@@ -13,10 +13,11 @@
     --primary-font-family: 'Bangers', sans-serif;
     --secondary-font-family: 'Oswald', sans-serif;
     --shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+    --header-height: 1.75rem;
 }
 
 body, html {
-    min-height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     background-color: var(--primary);
@@ -101,9 +102,39 @@ h3.message-text {
 .grid-line {
     width: 100%;
     height: 2px;
+    justify-self: center;
     margin: 4px;
     grid-column: 1 / -1;
     background: var(--secondary-dark);
+}
+
+@media (min-width: 600px) {
+
+    .fit-screen {
+        height: calc(100vh - var(--header-height));
+        overflow: hidden;
+    }
+
+    /* custom scrollbar modified from: https://codepen.io/xtrp/pen/QWjREeo */
+    ::-webkit-scrollbar {
+        width: 20px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: #d6dee140;
+        border-radius: 20px;
+        border: 6px solid transparent;
+        background-clip: content-box;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: #a8bbbf40;
+    }
+
 }
 
 @media (max-width: 600px) {
